hvantran/project-management#149 Refactor code