@@ -29,6 +29,7 @@ import org.springframework.boot.web.servlet.ServletListenerRegistrationBean;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.kafka.core.KafkaTemplate;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
@@ -99,11 +100,11 @@ public class InitializeConfigurations {
 
             List<Object> metricProviders = Stream.of(metricProviderBeanNames).map(ctx::getBean).collect(Collectors.toList());
             List<MetricConsumerHandler> metricConsumers = Stream.of(metricConsumerBeanNames).map(ctx::getBean)
-                                                                .map(o -> (MetricConsumerHandler) o).collect(Collectors.toList());
-            List<Object> metricRegistries = Stream.of(metricRegistryBeanNames).map(ctx::getBean).collect(Collectors.toList());
-            List<Object> poolSettings = Stream.of(schedulePoolSettingBeanNames).map(ctx::getBean).collect(Collectors.toList());
+                    .map(o -> (MetricConsumerHandler) o).toList();
+            List<Object> metricRegistries = Stream.of(metricRegistryBeanNames).map(ctx::getBean).toList();
+            List<Object> poolSettings = Stream.of(schedulePoolSettingBeanNames).map(ctx::getBean).toList();
             ObjectUtils.checkThenThrow(metricRegistries.size() != 1, "Required at least one of Metric Registry annotation");
-            Object metricRegistry = metricRegistries.stream().findFirst().orElseThrow();
+            Object metricRegistry = metricRegistries.getFirst();
             ObjectUtils.checkThenThrow(!(metricRegistry instanceof MetricProviderRegistry), "This must be an instance of MetricProviderRegistry");
             MetricProviderRegistry metricProviderRegistry = (MetricProviderRegistry) metricRegistry;
             metricProviderRegistry.loadFromObjects(metricProviders);
